// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render size Button 1`] = `
<button
  className="nice-btn primary large"
  onClick={[Function]}
  type="button"
>
  Large
</button>
`;

exports[`<Button /> should render style Button 1`] = `
<button
  className="nice-btn primary medium"
  onClick={[Function]}
  type="button"
>
  Primary
</button>
`;

exports[`<Button /> should render style and size Button 1`] = `
<button
  className="nice-btn primary large"
  onClick={[Function]}
  type="button"
>
  Primary large
</button>
`;

exports[`<Button /> should render the Button 1`] = `
<button
  className="nice-btn primary medium"
  onClick={[Function]}
  type="button"
>
  Default
</button>
`;
